--- a/expe.tex
+++ b/expe.tex
@@ -186,7 +186,7 @@ Dielectric or metallic structures can be made by cutting a thin polished slab of
 A similar sample used in experiment consisted of bars from strontium titanate (SrTiO$_{3}$) with a rectangular cross-section (see Fig. \ref{fg_STO_bar_geom}), 
 where a structure with 10--30 $\upmu$m resolution was written into a thin slab of the dielectric of a similar thickness \cite{yahiaoui2011tunable}.
 
-If the slab is made of a monocrystal or a ceramic, it is usually extremely brittle and also sensitive to breaking due to thermal stresses. Femtosecond laser micro-machining can alleviate both problems thanks to evaporating most of the heated material before the heat can spread by thermal conduction. Fabrication of the strontium titanate bars was accomplished by the professional Alphanov facility in France.
+If the slab is made of a monocrystal or a ceramic, it is usually extremely brittle and also sensitive to breaking due to thermal stresses. Femtosecond laser micro-machining can alleviate both problems thanks to evaporating most of the heated material before the heat can spread by thermal conduction. Fabrication of the strontium titanate bars was accomplished by the  Alphanov facility in France.
 % should make some conclusion
 %}}}
 \paragraph{Fabrication of sieves and fishnet metamaterial layers}%{{{
