--- a/theory.tex
+++ b/theory.tex
@@ -803,9 +803,9 @@ One thus only needs to prove the Bloch theorem for the time-invariant parts of t
 \begin{enumerate}
 \item{
 For $\E(\rr)$ to be a  valid solution of Maxwell equations in the periodic structure at the angular frequency $\omega$,
-it can be derived from Eqs. (\ref{eq_me3}, \ref{eq_me4}, \ref{eq_epstensor} and \ref{eq_harmonic}) in straightforward manner that
+it can be derived from the Maxwell Eqs. (\ref{eq_me3}, \ref{eq_me4}), taking into account the local medium response to the fields as defined by Eq. (\ref{eq_epstensor}) to the harmonic wave from Eq. (\ref{eq_harmonic}), that
 \begin{equation} 
-{\epsrl}^{-1}(\omega,\rr) \nabla\times \left[{\murl}^{-1 }(\omega,\rr) \nabla\times \E(\rr) \right] = \frac{\omega^2}{c^2}\E(\rr).   \label{eq_eigen_e}
+{\epsrl}^{-1}(\omega,\rr) \nabla\times \left[{\murl}^{-1 }(\omega,\rr) \nabla\times \E(\rr) \right] = \frac{\omega^2}{c^2}\E(\rr),   \label{eq_eigen_e}
 \end{equation}
 In analogy with the quantum-mechanical proof, the left hand side of Eq. (\ref{eq_eigen_e}) can be associated with the Hamiltonian $\hat H\psi$, and the right hand side with its eigenvalue $h\psi$ \cite{johnson2003introduction}. 
 } 
@@ -1041,7 +1041,7 @@ Other resonances have both dipole moments zero, which in general results from hi
 %% TODO how much should be "predicted" here, and nhow much should be left for the Results section?
 
 %}}}
-\paragraph{Bragg band gaps}%{{{ TODO
+\paragraph{Bragg band gaps} %{{{ TODO
 Band gaps of a different type, denoted as Bragg band gaps or also as \textit{photonic band gaps} (PBG), are observed exclusively in periodic structures when an integer number of half-waves fits into the unit cell. 
 In the above mentioned periodic lattice of isolated particles, the Bragg band gap can therefore be understood as a resonance of the electromagnetic wave in the space \textit{between} the particles, in contrast with the individual resonances where most of the energy is localised \textit{inside} the particles -- or at least very close to them.
 
@@ -1056,7 +1056,7 @@ The width of the band gap depends on the scattering strength of the particles; i
 In the Results section, it is also shown that for a particular choice of parameters the width of the Bragg band gap can vanish. 
 % -> zero-width case (it is a transition between a mode traversing from one photonic band to another --- TODO put into Results)
 
-In analogy with the solid-state physics, where the notion of band gaps originates from, the Bragg band gaps can be called \textit{direct} if the dispersion curves at the lower and upper band gap edges are at the same wavenumber $K$. 
+In analogy with the solid-state physics the Bragg band gaps can be called \textit{direct} if the dispersion curves at the lower and upper band gap edges are at the same wavenumber $K$. 
 
 In contrast, the individual resonances are analogous to the \textit{indirect} band gaps, as the of phase increase over an unit cell is different  for frequencies below and above the individual resonance. Some particular examples are shown later.
 
