--- a/conclusion.tex
+++ b/conclusion.tex
@@ -58,6 +58,7 @@
 
 %% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
 %% * quasicrystals and disorder, 
+%  * other (photonic) crystal families than cubic
 %  * plasmonic nanoparticles (and related MMs at optical frequencies?)
 %% * chiral media, bianisotropy, circular dichroism
 %			"Further, also the effects of more general properties of the constituent materials could be investigated, but this would require expanding the source code of the FDTD simulation library used (i.e., MEEP). While anisotropy and optical activity would be welcome, the particularly interesting option is gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors  that breaks time-reversal symmetry. This would open the wide research possibilies of non-reciprocal metamaterial devices."
