--- a/fdphd.bib
+++ b/fdphd.bib
@@ -236,6 +236,12 @@
   year={2008},
   school={Charles University, Prague}
 }
+@thesis{pazoutova2011dp,
+  title={Analysis and simulations of selected negative refractive index structures},
+  author={Pažoutová, Hana},
+  year={2011},
+  school={Czech Technical University, Prague}
+}
 /*}}}*/
 Terahertz spectroscopy of ferroelectrics and related materials
 
@@ -1788,6 +1794,13 @@ lts.fzu.cz/pdf/d-js.pdf
 	howpublished={Online},
 	url={https://github.com/FilipDominec/meep\_metamaterials},
 	note={last visited {M}ay 2014},}
+}
+@misc{dominec2015_mpb,
+	author = {Dominec, Filip},
+	title = {MPB plotting script},
+	howpublished={Online},
+	url={https://github.com/FilipDominec/mpb-plotting},
+	note={last visited {O}ctober 2015},}
 }
 @misc{dominec2015_triostepper,
 	author = {Dominec, Filip},
