--- a/title.tex
+++ b/title.tex
@@ -83,7 +83,7 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \chapter*{Abstrakt}
 \noindent ~
 % TODO přeložit
-Při setkání elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby pracovaly s vlnou žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je pro terahertzovou techniku, kde můžou překlenout poměrně slabé výsledky klasických metod.  
+Při setkání elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby interagovaly s vlnami žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je pro terahertzovou techniku, kde můžou překlenout poměrně slabé výsledky klasických metod.  
 
 Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou disperzí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se nezřídka uvažuje.
 
