--- a/theory.tex
+++ b/theory.tex
@@ -1369,39 +1369,39 @@ historical review, it appears that MMs and PhCs are divided by historical reason
 %}}}
 \paragraph{The wavelength criterion} %{{{
 Originally, the determining parameter was surely the ratio of the unit cell size to the wavelength of the electromagnetic wave (at the given frequency of operation).
-Even some modern recent papers \cite{tsukerman2011nonlocal} define MMs as \textit{(...) artificial periodic structures with features smaller than the vacuum wavelength}.
+Even some recent papers \cite{tsukerman2011nonlocal} define MMs as 
+\begin{displayquote}
+\textit{(...) artificial periodic structures with features smaller than the vacuum wavelength}.
+\end{displayquote}
 
-It should be noted that the studies of MM and PhC were both inspired by a wave propagating through the lattice of a natural crystal. The difference was however that in the earlier case of MMs, it was an \textit{optical} wave, whereas in the case of PhCs the inspiration came from the \textit{electron wavefunction}. The wavelength of the valence-band electrons is similar to the inter-atomic distance ($\approx 10^{-10}$ m), always demanding the description through the Bloch theorem, whereas the wavelength of light is roughly four orders of magnitude larger, enabling to approximate the crystal as a homogeneous medium.
+Studies of MM and PhC were both inspired by a wave propagating through the lattice of a natural crystal. The difference was however that in the earlier case of MMs, it was an \textit{optical} wave, whereas in the case of PhCs the inspiration came from the \textit{electron wavefunction}. The wavelength of the valence-band electrons is similar to the inter-atomic distance ($\approx 10^{-10}$ m), always demanding the description through the Bloch theorem, whereas the wavelength of light is roughly four orders of magnitude larger, enabling to approximate the crystal as a homogeneous medium.
 
 In the analogy, the earlier metamaterials (or, artificial dielectrics) were mostly thought as deeply subwavelength, which provided a clear and easy distinction from all PhCs. It also allowed to neglect spatial dispersion for the wave. The situation however appears to change with realistic MM scaling to the optical range, since the wavelength becomes comparable to the unit cell size and both regions start to overlap as illustrated in Fig. \ref{fg_mm_phc_diagram}. Besides, the PhC-MM boundary then becomes also frequency dependent.
 
 \begin{figure}[h] \caption{Rough illustration of the ratio of the Bloch wavelength ($2\pi/K$) to the unit cell size $a$ in metamaterials and photonic crystals} \label{fg_mm_phc_diagram} \centering \includegraphics[width=.4\textwidth]{img/mm-phc-diagram.pdf} \end{figure}
 %}}}
 \paragraph{The energy criterion} %{{{
-The time-averaged energy of a plane wave in vacuum is constant. Any sort of interaction of MMs or PhCs with the wave is inherently connected to an uneven distribution of the electromagnetic energy in the structure. This may become the rationale for a new criterion: In the MMs near a resonance, the energy is highly concentrated inside a part of the unit cell, typically close to sharp edges of metals or within a particle of high-permittivity dielectric. On the contrary, the resonances in typical PhCs do not concentrate the energy, and instead there is a moderately high intensity of the field in the majority of the space between the scattering structure elements.
+The time-averaged energy of a plane wave in vacuum is constant, but any sort of interaction of MMs or PhCs with the wave is inherently connected to an uneven distribution of the electromagnetic energy in the structure. This may become the rationale for a new criterion: In the MMs near a resonance, the energy is highly concentrated inside a part of the unit cell, typically close to sharp edges of metals or within a particle of high-permittivity dielectric. On the contrary, the resonances in typical PhCs do not concentrate the energy, and instead there is a moderately high intensity of the field in the majority of the space between the scattering structure elements.
 
-As a result, the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. % This is the reason behind the aforementioned parametric scans \cite{shi2007,rybin2015phase,dominec2014transition} through the unit cell spacing, % (todo add refs from AdMonsoriu ...) since they recognize the nature of each single resonance mode, and justify even the problematic structures at the boundary to be viewed either as a MM or a PhC in different parts of the spectra.
-On the contrary, a high concentration of the energy within a small part of the structure reduces the sensitivity of the parameters under a moderate disorder in the cell position, which has also been viewed as a trait of metamaterials, \cite{peng2007}: 
+As a result, the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. 
+High concentration of the energy within a small part of the structure reduces the sensitivity of the parameters under a moderate disorder in the cell position, which has also been viewed as a trait of metamaterials, \cite{peng2007}: 
 \begin{displayquote}
 	\textit{(the fact that) the randomized positions do not influence significantly the left-handed properties indicates that such composite is different from (...) photonic crystals}
 \end{displayquote}
-%This criterion is somewhat vague, as 
+% This is the reason behind the aforementioned parametric scans \cite{shi2007,rybin2015phase,dominec2014transition} through the unit cell spacing, % (todo add refs from AdMonsoriu ...) since they recognize the nature of each single resonance mode, and justify even the problematic structures at the boundary to be viewed either as a MM or a PhC in different parts of the spectra.
 
 %}}}
 \paragraph{The phase criterion} %{{{
-There however exists a well-defined, rigorous criterion dividing the periodic structures into two groups at a given frequency: When the structure is excited above its frequency of resonance, and the resonant energy is well localized in the part of a unit cell, part of the volume contains field with sign opposite to the excitation wave, which is enabled by the behaviour of the Lorentz oscillator illustrated in Fig. \ref{fg_oscillator_spectrum}. %% TODO check Fig 2.2 
-This opposite-field domain is delimited by a closed surface.
+The above criteria are somewhat vague, but there exists a well-defined, rigorous criterion dividing the periodic structures clearly into two groups at a given frequency: When a metamaterial is excited above its frequency of resonance, and the resonant energy is well localized, the part of the unit cell volume contains field with the sign opposite to that in the excitation wave. This is similar to the behaviour of the Lorentz oscillator illustrated in Fig. \ref{fg_oscillator_spectrum}. %% TODO check Fig 2.2 
+This opposite-field domain is delimited by a surface where either the electric or magnetic field is constantly zero, which will be denoted as the \textit{nodal plane}. For the individual resonance, the nodal plane is closed and there exists some path through the unit cell which does not cross any nodal plane, while te Bragg band gap leads to open surfaces of the opposite-field domain, transversally interconnected between the cells. A limiting case is the band gap in a plan-parallel dielectric mirror.
 
-On the contrary, a Bragg band gap exhibits open surfaces, transversally interconnected between the cells. A limiting case is the band gap in a plan-parallel dielectric mirror.
-
-The difference between the topology of a sphere and of two parallel planes can be interpreted as the boundary between MMs and PhCs. However, this well-defined difference practically manifests as a $2\pi$-skip of the phase across each unit cell without any obvious impact on the wave energy. In more details this is demonstrated in Chapter \ref{chap_results} %TODO point to the diel array
+The difference between the topology of a closed localized nodal plane, or a delocalized pair of nodal planes can be interpreted as the boundary between MMs and PhCs. However in practice, this well-defined difference causes a $2\pi$-skip of the phase along each unit cell without any obvious impact on the propagation of energy. In more details this is demonstrated in Chapter \ref{chap_results} %TODO point to the diel array
 by numerical studies of the transition cases.
-
-Under this criterion, the decision is frequency-dependent. All structures fall into the PhC class in the high-frequency limit.
+%Under this criterion, the decision is frequency-dependent. All structures fall into the PhC class in the high-frequency limit.
 
 %}}}
 \paragraph{Less fortunate criteria} %{{{
-Some sources include the "unusual parameters" into the MM definition, but this is hardly acceptable since it would obviously exclude some established MMs out of the definition; the previous historical chapter attempts to give several examples. 
+Some sources include the requirement of unusual parameters into the MM definition, but this is hardly acceptable since it would obviously exclude some established MMs out of the definition; the previous historical chapter attempts to give several examples. It also mentions that even some natural materials cat exhibit unusual parameters.
 
 Also the demand for "artificiality" in some other definitions appears to be somewhat artificial on its own, provided that one is interested in the actual structure properties rather than in its origin:
 \begin{displayquote}
@@ -1415,7 +1415,7 @@ to a topic such as longitudinally modulated waveguide filters.
 
 %}}}
 \paragraph{Metamaterials as all structures treated as homogeneous} %{{{
-With the criteria of wavelength or energy localisation leaving many structures in the "grey zone", and the phase-advance criterion being rigorous, but of little practical use, the author proposes to adopt another criterion based solely on one's subjective decision on how each structure is characterized. 
+The criteria of wavelength or energy localisation leave many structures on the indefinite boundary. The phase-advance criterion is rigorous, but of little practical use. Thus the author proposes to adopt another criterion based solely on one's subjective decision on how each structure is characterized. 
 
 The unifying concept of virtually all MM studies is to describe \textit{how} the wave propagates though them. Their overwhelmingly complicated electromagnetic interaction is approximated by \textit{homogenization}, i.e. by finding such properties of a homogeneous medium that would behave in similar way.
 
@@ -1424,80 +1424,9 @@ In contrast, the PhC research focuses on \textit{whether} the wave can propagate
 This also justifies denoting MMs and PhCs as two different \textit{paradigms} rather than two distinct \textit{classes} of periodic structures, and it is the reason why the neutral term of \textit{periodic structure} is used in this thesis. 
 
 With this criterion, the author believes, there is no strict rule for classification. Some structures are only more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
-An important question arises as to what extent the homogenization is applicable, and when its theory can fail. The basic answers are sketched in the following section.
 
-%todo read Sihvola2009-MM_a_personal_view.pdf
-%todo read Sihvola-emergence_in_mms.pdf
+% emergent phenomena
+% Wikipedia: https://en.wikipedia.org/wiki/Metamaterial
+% "Metamaterials derive their properties not from the properties of the base materials, but from their newly designed structures."
 
-%   whatis.com (http://whatis.techtarget.com/definition/metamaterial):
-%  \begin{displayquote}
-%  \end{displayquote}
-%  A metamaterial is a (\ldots) substance whose properties depend on its inter-atomic structure rather than on the composition of atoms themselves.
-%  \end{displayquote}
-%  %and this continues with description of neg refr as the typical application
-%  
-%  Duke university (http://metamaterials.duke.edu/research/metamaterials):
-%  \begin{displayquote}
-%  MMs are artificially structured materials used to control light, sound and many other physical phenomena. The properties of metamaterials are derived from the inherent properties of their constituent materials, as well as from the geometrical arrangement of these (\ldots)}
-%  \end{displayquote}
- %further they stress the importance of homogenization
- %"it is difficult to arrive to a strict and unambiguous definition"
-
-% \cite{sihvola2009metamaterials}
-
-%}}}
-
-\subsection{Metamaterial homogenization} % note that NRW and CDH are discussed later
-\paragraph{todo}%{{{
-%% This is my approach only to a very complex problem; I can not solve all humankind's problems
-
-%Metamaterials are sometimes defined as sub-wavelength periodic
-%structures with properties not ocurring in nature, but my preferred
-%definition is anything that is subject to homogenisation – i.e. a
-%structure for which we can apply the Bloch-Floquet theorem
-%and determine the K-vector.
-
-Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
-
-\cite{li2009determination}
-\cite{hasar2011retrieval}
-\cite{chalapat2009wideband}
-\cite{silveirinha2007metamaterial}
-\cite{smith2005electromagnetic}
-\cite{wallen2011anti}
-\cite{yang2010retrieving}
-
-
-
-
-%Chakrab.: The homogenizable metamaterials were assigned an effective permeability using the procedure described by Koschny et al [16]
-%[16] Th Koschny, P Markoš, D R Smith and C M Soukolis, Phys. Rev. B65, 195104 (2002)
-
-%ref Homogenisation issues - response to our paper from OpEx
-\cite{rockstuhl2008transition}
-\cite{paul2011reflection}
-\cite{andryieuski2012bloch}
-
-\cite{andryieuski2010homogenization} 
-% classifies homog approaches into 1) s-parameters, 2) field averaging, 3) quasimode[17], 4) wave phenomena
-% elaborates no. 4 to unambiguously retrieve bulk parameters; but there is still one interface and the simulation volume is large
-
-\cite{simovski2007bloch}
-\cite{simovski2009material}
-\cite{simovski2011electromagnetic}
-\cite{mortensen2010unambiguous}
-% todo{Elaborate mathematical treatise on this topic: \cite{sjoberg2005floquet}}
-% A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization " The behavior of the solutions of a PDE with rapidly oscillating coefficients, considered over distances large compared to the oscillations, is in several respects similar to the solutions of a PDE with slowly varying coefficients.   The problem of homogenization is to find these slowly varying coefficients by an ap- propriate limit process of the rapidly oscillating ones"
-
-%% todo "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
-%% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
-%% magnetic theory, to the Lorentz-Lorenz and Maxwell-Garnet effective medium models [1–3]
-%			[1] J. C. M. Garnett, Phil Trans. R. Soc. A 203, 385 (1904).
-%			[2] D. E. Aspnes, Thin Solid Films 89, 249 (1982).
-%			[3] W. Cai and V. Shalaev, Optical Metamaterials: Fundamentals and Applications (Springer, New York, 2010).
-
-%% Many MMs do not bring negative refraction, other (composites) do, but not by means of electromagnetic resonances: 
-%% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
-
-%}}}
 
